Add documentation to MAC (#53)
* WIP, update readme

* wip - documentation

* update md doc

* minor update for the documentation

* update bookmarks with homepage and documentation

* typos and minor cleanup

* add titles and remove unneeded files

* update readme

* bookmark update

* measure folder update

* checkstyle

* rename documentation folder to docs

* update wrong link in readme

* formatting

* fix for non functional measures

* add common pitfalls bookmark stub

* make measure names more consistent

* update measure documentation

* add descriptions for dimensions and measures in the cube description

* review

* more details regarding measure definition

* formatting

* finish common pitfalls

* clarification on full vs partial provider

* update common pitfalls filter selection mode

* checkstyle

* remove todo

* Clean code

* update direct memory sum definition

* invert plot axes for store chunk sizes

* checkstyle

* update documentation about used memory ratio

* Rename UsedMemory.Ratio and MaxMemory.Ratio to include "DirectMemory"

Co-authored-by: mdellabani <mde@activeviam.com>